issue #5 Use less guava